# overkill

./: .gitignore  .gitleaks.toml  .golangci.yml  .govulncheck-ignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE-MIT  Makefile  OVERKILL_ARCH.md  README.md  ROADMAP.md  WALLS.md  Wants and a to do list.html  bundled_skills.go  claude-session.service  docker-compose.yml  go.mod  go.sum  install.ps1  install.sh  install_test.sh  phase5-plan.md
.github/: CONTRIBUTING.md  ROADMAP.md  dependabot.yml
adguard/: docker-compose.yml
affine/: docker-compose.yml
authelia/: Caddyfile  docker-compose.yml
autoheal/: docker-compose.yml
backup/: backup.sh  databunker-backup.service  databunker-backup.timer
bar-assistant/: docker-compose.yml
bridge/: client.go  client_test.go  coverage.xml  overkill_pb2.py  overkill_pb2_grpc.py  pyproject.toml  server.py
bridge/bridge.egg-info/: PKG-INFO  top_level.txt
bridge/compaction/: service.py
bridge/memory/: service.py
bridge/proto/: overkill.pb.go  overkill_grpc.pb.go  overkill_pb2.py  overkill_pb2.pyi  overkill_pb2_grpc.py
bridge/reranking/: service.py
bridge/tests/: test_server.py
cloudflared/: docker-compose.yml
docs/: RELEASING.md  book.toml  gateways.md
docuseal/: docker-compose.yml
ethos/: .env.example  .gitignore  .golangci.yml  .gosec-ignore  AGENTS.md  Brewfile  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE-APACHE  Makefile  README.md  ROADMAP.md  SECURITY.md  WALLS.md  docker-compose.yml  go.mod  go.sum  install.sh  install_test.sh  overkill-master-plan.md  wishes.md
grafana/: docker-compose.yml
kuma/: docker-compose.yml
open-webui/: docker-compose.yml
plans/: gateway-harden-subagent-onboarding.md  phase-0-spec.md  (+16 more)
prod/bridge/: .coverage  pyproject.toml
prod/bridge/bridge.egg-info/: SOURCES.txt  requires.txt
prod/bridge/embeddings/: service.py
prod/bridge/memory/: postgres_backend.py  service.py
prod/bridge/tests/: test_server.py
(+1873 files in other folders)
