[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overkill-bridge"
version = "0.1.0"
description = "Python bridge for Overkill AI coding agent"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "protobuf>=4.25.0",
    "numpy>=1.26.0",
    "sentence-transformers>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3.0",
    "mypy>=1.8",
]
qdrant = [
    "qdrant-client>=1.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
exclude = ["proto/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
